# Bear

./: .codespellrc  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  INSTALL.md  RELEASE.md
.github/: labels.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml
bear/: CLAUDE.md
bear-codegen/src/: tables.rs
bear-codegen/tests/: snapshots.rs
build-support/compilers-codegen/: Cargo.toml
crates/bear/: CLAUDE.md  Cargo.toml  build.rs
crates/bear-completions/: Cargo.toml
crates/bear-driver/: Cargo.toml
crates/bear-driver/src/: main.rs
crates/bear-wrapper/: Cargo.toml
crates/intercept/: Cargo.toml  build.rs
crates/intercept-preload/: CLAUDE.md  Cargo.toml  README.md
crates/intercept-supervisor/: CLAUDE.md  Cargo.toml  build.rs
crates/intercept/src/: environment.rs  lib.rs  reporter.rs  state.rs  supervise.rs  tcp.rs  wrapper.rs
docs/rationale/: duplicate-latest-flags-win.md  process-tree-teardown.md  vala-transpiler-database.md
docs/requirements/: interception-events-format.md  interception-preload-mechanism.md  interception-signal-forwarding.md  interception-wrapper-mechanism.md  output-append.md  output-compilation-entries.md  output-duplicate-detection.md  output-response-file-inlining.md  output-source-directory-filter.md  recognition-ambiguous-name-probe.md
integration-tests/: CLAUDE.md
intercept-preload/: build.rs
intercept-preload/src/: implementation.rs  session.rs
man/: CLAUDE.md  bear.1  bear.1.md
scripts/: check-crate-table-coverage.sh  check-requirements-coverage.sh
tests/dogfooding/: README.md  SPEC.md  lib.sh  run.sh  (+1 more)
(+78 files in other folders)
