# SPDX-License-Identifier: GPL-3.0-or-later

[package]
name = "intercept"
description = "Shared interception runtime for Bear (reporter, collector, wrapper, environment)."
version.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
edition.workspace = true

[lib]
name = "intercept"
path = "src/lib.rs"

[dependencies]
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
log.workspace = true
signal-hook.workspace = true

[target.'cfg(unix)'.dependencies]
libc.workspace = true

[build-dependencies]
compilers-codegen = { path = "../../build-support/compilers-codegen" }

[dev-dependencies]
tempfile.workspace = true
